iPad storyboard start

--- a/boatguard/Base.lproj/Main.storyboard
+++ b/boatguard/Base.lproj/Main.storyboard
@@ -168,6 +168,7 @@
                         <segue destination="Jr0-fR-zYF" kind="modal" id="3jr-YV-Iwq"/>
                         <segue destination="Crg-ye-zXX" kind="modal" id="PEG-MZ-xxF"/>
                         <segue destination="8YI-Eo-KEg" kind="modal" id="zlX-sr-Dt3"/>
+                        <segue destination="r5i-SD-VHb" kind="modal" id="TkP-da-NB8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fM9-aF-nwH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -871,7 +872,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZM0-2M-1QK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="634" y="1471"/>
+            <point key="canvasLocation" x="670" y="1471"/>
         </scene>
         <!--BilgePumpController-->
         <scene sceneID="9dY-fv-S8v">
@@ -989,7 +990,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zhB-yV-gDi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-248" y="1471"/>
+            <point key="canvasLocation" x="-716" y="1471"/>
         </scene>
     </scenes>
     <resources>
